--- a/practica 5/Terraplanismo/terraplanismo/cssfinal/cssPrincipal.css
+++ b/practica 5/Terraplanismo/terraplanismo/cssfinal/cssPrincipal.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 body{
-    background-color: black;
+    background-color: lightblue;
 }
 /* CABECERA */
 .showclase
@@ -156,3 +156,5 @@ body{
 #redesPie p{
     float: right;
 }
+
+
