--- a/practica 5/Terraplanismo/terraplanismo/cssfinal/cssPrincipal.css
+++ b/practica 5/Terraplanismo/terraplanismo/cssfinal/cssPrincipal.css
@@ -30,7 +30,7 @@ body{
     background-image: url(../img/81TO0hoS-hL._AC_SS450_.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    font-size: 150px;
+    font-size: 90px;
     color: #fff;
     mix-blend-mode: multiply;
 }
@@ -39,8 +39,6 @@ body{
     clear: both;
   }
   #menu {
-    margin-top: 1000px;
-    margin-bottom: 100px;
     margin: auto;
     width: 700px;
     font-family:Georgia, 'Times New Roman', Times, serif;
@@ -53,12 +51,17 @@ body{
   }
   
   .nav {
-    width: 1000px;
-    margin: 0 auto;
+    width: 655px;
+    height: 63px;
+    border: white 2px solid;
   }
   
-  .nav>li {
+  .nav li {
     float: left;
+  }
+  .nav li ul li
+  {
+    display: block;
   }
   
   .nav li a {
@@ -67,11 +70,13 @@ body{
     text-decoration: none;
     padding: 20px 15px;
     display: block;
+    border: solid white 2px;
   }
   
   .nav li a:hover {
     background-color: rgb(92, 138, 187);
     text-decoration: underline;
+
   }
   
   .nav li ul {
@@ -82,6 +87,7 @@ body{
   
   .nav li:hover>ul {
     display: block;
+    opacity: 0.8;
   }
   
   .nav li ul li {
@@ -158,5 +164,26 @@ body{
 #redesPie p{
     float: right;
 }
-
+/*boton de vuelta ariba*/
+#btn{
+  position:sticky;
+  top: 250px;
+  left: 600px;
+  height: 90px;
+  width: 90px;
+  border-radius: 100%;
+  background-color: aliceblue;
+  color: blue;
+  opacity: 0.18;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  font-size: 4em;
+  z-index: 1000000000000000;
+}
+#btn:hover
+{
+  opacity: 1;
+}
 
